{
    "name": "WorldMapInput",
    "maps": [
        {
            "name": "Mouse",
            "id": "62b38c8c-47d1-4bc4-950b-af4c505253a0",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "d8f3e360-8262-4f54-94c8-984de84bf477",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "799b1270-a448-4522-a453-24e22897590e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "297f2cc3-7d69-4821-918b-307a1fc62c80",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7066f9a9-bb1e-4a4f-b37e-0e078b25e170",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}